yaml/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: hola-modules-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: hola-modules
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
