yaml/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hola-modules-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: hola-modules
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1234
