yaml/kibana-network.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kibana-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 5601
        name: https
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
        # credentialName: kibana-credential-istio # Name of a secret, only used in mode=SIMPLE
      hosts:
        - kibana.dev.honestbank.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana
spec:
  hosts:
    - kibana.dev.honestbank.com
  gateways:
    - kibana-gateway
  tls:
    - match:
        - port: 5601
          sni_hosts:
            - kibana.dev.honestbank.com
      route:
        - destination:
            host: quickstart-kb-http
            port:
              number: 5601
              name: https
